# industrial_datascience_sim_machine_knifes

./: Dockerfile  commithash.txt  pyproject.toml  readme.md
data/: simulated_inspection_data.csv
